# rag_project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/ingestion/: embedder.py  loader.py  splitter.py
src/retrieval/: qa_chain.py  retriever.py
