[project]
name = "rag_project"
version = "0.1.0"
description = "RAG pipeline with LanChain and pgvector"
authors = [
    {name = "Christophe Vellen",email = "christophe.vellen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "langchain-postgres (>=0.0.17,<0.0.18)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "ipython (>=9.12.0,<10.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "requires (>=0.12.1,<0.13.0)",
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
    { include = "src" }
]